manifests/configs/prometheus/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.apps.atlantis.janz.digital
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - grafana.apps.atlantis.janz.digital
